<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dip"
        android:layout_marginRight="40dip"
        android:layout_marginTop="10dip"
        android:text="@string/message_placeholder"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/messageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/headline"
        android:layout_marginLeft="40dip"
        android:layout_marginRight="40dip"
        android:layout_marginTop="20px"
        android:text="@string/message_txt_placeholder"
        android:textColor="@color/blue"
        android:textSize="24sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/msgPreviousText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="40dip"
        android:layout_marginRight="40dip"
        android:gravity="bottom"
        android:text="@string/no_previous"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/msgCounterText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dip"
        android:layout_marginRight="40dip"
        android:gravity="center"
        android:text="@string/msg_counter"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/msgNextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="65dp"
        android:gravity="center"
        android:text="@string/no_next"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/timestampText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/headline"
        android:layout_alignBottom="@id/headline"
        android:layout_alignRight="@id/msgNextText"
        android:gravity="bottom"
        android:text="@string/timestamp_txt_placeholder"
        android:textColor="@color/green"
        android:textSize="22sp" />

    <ImageView
        android:id="@+id/imageIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/headline"
        android:layout_toRightOf="@id/headline"
        android:src="@drawable/camera_symbol"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/msgCounterText"
        android:layout_below="@id/headline"
        android:layout_marginTop="10dip"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_launcher"
        android:visibility="invisible" />

</RelativeLayout>